--- a/src/app/workflows/agencies/commons/components/agencies-detail/agencies-detail.component.html
+++ b/src/app/workflows/agencies/commons/components/agencies-detail/agencies-detail.component.html
@@ -39,15 +39,23 @@
                         </div>
                     </div>
 
-                    <!-- <div class="row cls-row-detail" style="text-align: center;">
+                    <div class="row cls-row-detail">
                         <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field-detail">                                
-                            <button id="btnBack" class="btn btn-primary" type="button" (click)="navigateToAgencies()">Volver</button>                                                            
+                            <google-map [center]="agency.agencyMap.agencyMapPosition">
+                                <map-marker
+                                [position]="agency.agencyMap.agencyMapPosition"
+                                [title]="agency.agencyMap.agencyMapTitle"
+                                [label]="agency.agencyMap.agencyMapLabel"
+                                >
+                                </map-marker>
+                            </google-map>
                         </div>
-                    </div> -->
+                    </div>
+
+                    
                     <div class="row cls-row-detail" style="text-align: center;">
                         <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field-detail">                                
-                            <button id="btnUpdate" class="btn btn-primary" type="submit">Actualizar</button>
-                            <!-- <button id="btnBack" class="btn btn-primary" type="button" (click)="navigateToAgencies()">Volver</button>                                                             -->
+                            <button id="btnUpdate" class="btn btn-primary" type="submit">Actualizar</button>                                                         -->
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field-detail">                                
                             <button id="btnBack" class="btn btn-primary" type="button" (click)="navigateToAgencies()">Volver</button>                                                            
