--- a/src/app/workflows/agencies/commons/components/agencies-list/agencies-list.component.html
+++ b/src/app/workflows/agencies/commons/components/agencies-list/agencies-list.component.html
@@ -42,88 +42,9 @@
                     </div>
                 </div>
 
-
-                  <!-- <div class="row cls-row">
-                      <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field">
-                          <img  src="assets/img/icon_profile.jfif" title="Buscar" class="img-responsive img-profile"/>
-                          <div class="cls-text-contanier">
-                             <p class="cls-text"><span class="cls-title">Agencia 1</span></p> 
-                             <p class="cls-text"><span class="cls-subtitle">Lima</span></p> 
-                             <p class="cls-text"><span class="cls-detail">Av. xxxxxxxxxx</span></p> 
-                          </div>
-                          <img  src="assets/img/icon_start.png" title="Buscar" class="img-responsive img-start"/>
-                          
-                      </div>
-                  </div>
-                  <div class="row cls-row">
-                      <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field">
-                          <img  src="assets/img/icon_profile.jfif" title="Buscar" class="img-responsive img-profile"/>
-                          <div class="cls-text-contanier">
-                             <p class="cls-text"><span class="cls-title">Agencia 2</span></p> 
-                             <p class="cls-text"><span class="cls-subtitle">Arequipa</span></p> 
-                             <p class="cls-text"><span class="cls-detail">Av. xxxxxxxxxx</span></p> 
-                           </div>
-                          <img  src="assets/img/icon_start.png" title="Buscar" class="img-responsive img-start"/>
-                      </div>
-                  </div>
-                  <div class="row cls-row">
-                      <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field">
-                          <img  src="assets/img/icon_profile.jfif" title="Buscar" class="img-responsive img-profile"/>
-                          <div class="cls-text-contanier">
-                             <p class="cls-text"><span class="cls-title">Agencia 3</span></p> 
-                             <p class="cls-text"><span class="cls-subtitle">Trujillo</span></p> 
-                             <p class="cls-text"><span class="cls-detail">Av. xxxxxxxxxx</span></p> 
-                           </div>
-                          <img  src="assets/img/icon_start.png" title="Buscar" class="img-responsive img-start"/>
-                      </div>
-                  </div>
-                  <div class="row cls-row">
-                      <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field">
-                          <img  src="assets/img/icon_profile.jfif" title="Buscar" class="img-responsive img-profile"/>
-                          <div class="cls-text-contanier">
-                             <p class="cls-text"><span class="cls-title">Agencia 4</span></p> 
-                             <p class="cls-text"><span class="cls-subtitle">Piura</span></p> 
-                             <p class="cls-text"><span class="cls-detail">Av. xxxxxxxxxx</span></p> 
-                           </div>
-                          <img  src="assets/img/icon_start.png" title="Buscar" class="img-responsive img-start"/>
-                      </div>
-                  </div>
-                  <div class="row cls-row">
-                      <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field">
-                          <img  src="assets/img/icon_profile.jfif" title="Buscar" class="img-responsive img-profile"/>
-                          <div class="cls-text-contanier">
-                             <p class="cls-text"><span class="cls-title">Agencia 5</span></p> 
-                             <p class="cls-text"><span class="cls-subtitle">Cuzco</span></p> 
-                             <p class="cls-text"><span class="cls-detail">Av. xxxxxxxxxx</span></p> 
-                           </div>
-                          <img  src="assets/img/icon_start.png" title="Buscar" class="img-responsive img-start"/>
-                      </div>
-                  </div>
-                  <div class="row cls-row">
-                      <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field">
-                          <img  src="assets/img/icon_profile.jfif" title="Buscar" class="img-responsive img-profile"/>
-                          <div class="cls-text-contanier">
-                             <p class="cls-text"><span class="cls-title">Agencia 6</span></p> 
-                             <p class="cls-text"><span class="cls-subtitle">Amazonas</span></p> 
-                             <p class="cls-text"><span class="cls-detail">Av. xxxxxxxxxx</span></p> 
-                           </div>
-                          <img  src="assets/img/icon_start.png" title="Buscar" class="img-responsive img-start"/>
-                      </div>
-                  </div>
-                  <div class="row cls-row">
-                      <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field">
-                          <img  src="assets/img/icon_profile.jfif" title="Buscar" class="img-responsive img-profile"/>
-                          <div class="cls-text-contanier">
-                             <p class="cls-text"><span class="cls-title">Agencia 7</span></p> 
-                             <p class="cls-text"><span class="cls-subtitle">Tumbes</span></p> 
-                             <p class="cls-text"><span class="cls-detail">Av. xxxxxxxxxx</span></p> 
-                           </div>
-                          <img  src="assets/img/icon_start.png" title="Buscar" class="img-responsive img-start"/>
-                      </div>
-                  </div> -->
               </section>
 
-              <div class="cls-div-fixed">
+              <div class="cls-div-fixed" (click)="addAgency()">
                   <label>+</label>
               </div>
           </div>            
