--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div id="wrapper">
   <div class="content-home-menu">
-    <rp-home-header></rp-home-header>
+    <bcp-home-header></bcp-home-header>
   </div>
   <div id="content-wrapper" class="cls-content-wrapper" >
     <div class="cls-content-wrapper-div">
-      <rp-home-menu></rp-home-menu>
+      <bcp-home-menu></bcp-home-menu>
     </div>
     <div class="container-fluid cls-container-fluid">
       <router-outlet></router-outlet>
