--- a/src/app/workflows/agencies/commons/components/agencies-detail/agencies-detail.component.html
+++ b/src/app/workflows/agencies/commons/components/agencies-detail/agencies-detail.component.html
@@ -115,10 +115,10 @@
                     </div>
 
                     
-                    <div class="row cls-row-detail" style="text-align: center;">
+                    <div class="row cls-row-detail mb-4" style="text-align: center;">
                         <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field-detail">                                
-                            <button *ngIf="isEditMode" id="btnUpdate" class="btn btn-primary m-2" type="submit" (click)="validateEditAgency()">Actualizar</button>
-                            <button *ngIf="!isEditMode" id="btnAdd" class="btn btn-primary m-2" type="submit" (click)="validateEditAgency()">Registrar</button>
+                            <button *ngIf="isEditMode" id="btnUpdate" class="btn btn-primary m-2" type="submit" (click)="validateAgency()">Actualizar</button>
+                            <button *ngIf="!isEditMode" id="btnAdd" class="btn btn-primary m-2" type="submit" (click)="validateAgency()">Registrar</button>
                             <button id="btnBack" class="btn btn-primary m-2" type="button" (click)="navigateToAgencies()">Regresar</button> 
                         </div>
                     </div>
