fix position btn addAgency

--- a/src/app/workflows/agencies/commons/components/agencies-list/agencies-list.component.scss
+++ b/src/app/workflows/agencies/commons/components/agencies-list/agencies-list.component.scss
@@ -107,7 +107,8 @@ margin-right: 1.5rem;
     background-color: #e18b54;
     font-size: 30px;
     border-radius: 5rem;
-    left: 82%;
+    left: 68%;
+    top: 88%;
 }
 
 .cls-header-detail {
