--- a/src/app/workflows/agencies/commons/components/agencies-detail/agencies-detail.component.scss
+++ b/src/app/workflows/agencies/commons/components/agencies-detail/agencies-detail.component.scss
@@ -189,4 +189,11 @@ margin-right: 1.5rem;
     width: 100% !important;
 }
 
+.mapa {
+    width: 100%;
+    height: 500px;
+}
 
+.autocompleteMapa {
+    width: 100%;
+}
