--- a/src/app/workflows/agencies/commons/components/agencies-list/agencies-list.component.html
+++ b/src/app/workflows/agencies/commons/components/agencies-list/agencies-list.component.html
@@ -27,18 +27,19 @@
               </div>
           </div>
           <div id="pnlBody" class="cls-body">
-              <section class="pt-0 pb-0">
+              <section class="pt-2 pb-0">
 
                 <div (click) = "editAgency(agency)" class="row cls-row" *ngFor="let agency of agenciesList; let index = index;">
-                    <div class="col-lg-12 col-md-12 col-sm-12 div-lbl-field">
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-3 cls-icon">                                
                         <img [src]="agency.icon" title="Buscar" class="img-responsive img-profile"/>
-                        <div class="cls-text-contanier">
-                           <p class="cls-text"><span class="cls-title">{{agency.agency}}</span></p> 
-                           <p class="cls-text"><span class="cls-subtitle">{{agency.department}}</span></p> 
-                           <p class="cls-text"><span class="cls-detail">{{agency.address}}</span></p> 
-                        </div>
+                    </div>
+                    <div class="col-lg-8 col-md-8 col-sm-8 col-7">
+                        <p class="cls-text"><span class="cls-title">{{agency.agency}}</span></p> 
+                        <p class="cls-text"><span class="cls-subtitle">{{agency.department}}</span></p> 
+                        <p class="cls-text"><span class="cls-detail">{{agency.address}}</span></p> 
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-1 cls-icon">
                         <img  src="assets/img/icon_start.png" title="Buscar" class="img-responsive img-start"/>
-                        
                     </div>
                 </div>
 
